feat(panel): 面板EasyDoc跳转地址改成可配置

--- a/example/test-doc.html
+++ b/example/test-doc.html
@@ -128,6 +128,7 @@
         easyDocPath: "../public/easy-doc/EasyDoc.json",
         easyManualsPath: "../public/easy-doc/Manuals.json",
         easyProjectsPath: "../public/easy-doc/Projects.json",
+        // EasyDocDocumentUrl: "https://wedog.yuque.com/asmogc/vkpc0w/gpnmku#Aexs"
       });
     </script>
   </body>
